# monkeytype-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/monkeytype_cli/: __about__.py  __init__.py  __main__.py
src/monkeytype_cli/cli/: __init__.py
src/monkeytype_cli/tui/: main.py
