[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkeytype-cli"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Kanak Tanwar", email = "kanaktanwarpro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click",
  "rich",
  "textual",
  "textual-dev"
]

[project.urls]
Documentation = "https://github.com/kanakOS01/monkeytype-cli#readme"
Issues = "https://github.com/kanakOS01/monkeytype-cli/issues"
Source = "https://github.com/kanakOS01/monkeytype-cli"

[project.scripts]
monkeytype-cli = "monkeytype_cli.cli:monkeytype_cli"
monkeytype = "monkeytype_cli.cli:monkeytype_cli"

[tool.hatch.version]
path = "src/monkeytype_cli/__about__.py"
